fix tables on mobile screens

--- a/src/Components/MenuList/MenuList.css
+++ b/src/Components/MenuList/MenuList.css
@@ -15,6 +15,7 @@
 
 .class-selector {
   margin-top: 2rem;
+  display: flex;
 }
 
 .class-selector > button {
@@ -38,15 +39,34 @@
   background-color: rgb(0, 0, 0, 0.5);
 }
 
-.table-handler > table {
-  border-style: none;
-  width: 95vw;
+.table-handler {
+  width: 100%;
+  height: 75vh;
+  overflow: auto;
 }
 
+.cart-table-handler {
+  width: 100%;
+  overflow: auto;
+}
+
+.cart-table-handler > table,
+.table-handler > table {
+  width: 100%;
+}
+
+.cart-table-handler > table > tbody > tr > td,
+.cart-table-handler > table > thead > tr > td,
 .table-handler > table > tbody > tr > td,
 .table-handler > table > thead > tr > td {
   vertical-align: center;
   text-align: center;
+  padding: 2px;
+}
+
+.cart-table-handler > table > tbody > tr > td > input[type="number"],
+.table-handler > table > tbody > tr > td > input[type="number"] {
+  width: 80%;
 }
 
 .table-handler > table > tbody > .separator-row > td {
@@ -94,6 +114,7 @@
   flex-direction: column;
   display: none;
   z-index: 999;
+  overflow: auto;
 }
 
 .menu-list > .alert {
@@ -115,7 +136,8 @@
 
 .menu-list > .form {
   align-content: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-list > .form > lord-icon {
@@ -136,6 +158,10 @@
 .menu-list > .form > form {
   display: flex;
   flex-direction: column;
+}
+
+.menu-list > .form > form > button {
+  margin: 1rem 0rem 1rem 0rem;
 }
 
 #closeForm {
@@ -182,7 +208,7 @@
 }
 
 .cartItems {
-  max-height: 20%;
+  height: 38vh;
   overflow: auto;
 }
 
@@ -193,9 +219,29 @@
   }
   .form-input {
     width: 100%;
+    padding: 0.5rem 0rem 0.5rem 0rem;
   }
 
   .menu-list > .alert {
     width: 80%;
+  }
+}
+
+@media (max-width: 992px) {
+  .menu-list {
+    padding: 0rem;
+  }
+
+  .class-selector {
+    flex-direction: column;
+  }
+
+  .class-selector > button {
+    border-radius: 0.5rem;
+    margin: 0rem 0rem 1rem 0rem;
+  }
+
+  #formulary {
+    padding: 0rem 0.5rem 0rem 0.5rem;
   }
 }
